[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/transit/Transit.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/GUI/transparent.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/ExitDialog/escapevyhod.png" type="Texture" id=3]
[ext_resource path="res://addons/exit/Exit.gd" type="Script" id=4]
[ext_resource path="res://assets/GUI/ExitDialog/select.png" type="Texture" id=5]

[sub_resource type="GDScript" id=1]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float lod: hint_range(0.0, 5) = 1.0;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"
script = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/lod = 1.0

[node name="ExitDialog" type="Node2D"]
script = ExtResource( 4 )

[node name="Transit" parent="." instance=ExtResource( 1 )]
margin_left = 6.0
margin_top = -3.0
margin_right = 1008.0
margin_bottom = 571.0

[node name="Overlay" type="CanvasLayer" parent="."]
layer = -100

[node name="Popup" type="Popup" parent="Overlay"]
margin_right = 1000.0
margin_bottom = 574.0
rect_scale = Vector2( 1.9, 1.9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" type="Sprite" parent="Overlay/Popup"]
material = SubResource( 3 )
position = Vector2( 542.098, 307.496 )
scale = Vector2( 6.39343, 6.89066 )
texture = ExtResource( 2 )

[node name="Background" type="Button" parent="Overlay/Popup"]
visible = false
margin_top = -3.0
margin_right = 2026.0
margin_bottom = 1140.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageBox" type="Sprite" parent="Overlay/Popup"]
position = Vector2( 496.71, 285.188 )
scale = Vector2( 7.00002, 7 )
texture = ExtResource( 3 )

[node name="YesButton" type="Button" parent="Overlay/Popup"]
margin_left = 452.0
margin_top = 246.0
margin_right = 632.0
margin_bottom = 372.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selected" type="Sprite" parent="Overlay/Popup/YesButton"]
position = Vector2( 89.3462, 78.8807 )
scale = Vector2( 13.9894, 14.3077 )
texture = ExtResource( 5 )

[node name="NoButton" type="Button" parent="Overlay/Popup"]
margin_left = 444.0
margin_top = 316.0
margin_right = 653.0
margin_bottom = 443.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selected" type="Sprite" parent="Overlay/Popup/NoButton"]
visible = false
position = Vector2( 105.108, 64.8155 )
scale = Vector2( 13.9894, 14.3077 )
texture = ExtResource( 5 )

[connection signal="pressed" from="Overlay/Popup/Background" to="." method="_on_Background_pressed"]
[connection signal="mouse_entered" from="Overlay/Popup/YesButton" to="." method="_on_YesButton_mouse_entered"]
[connection signal="pressed" from="Overlay/Popup/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="mouse_entered" from="Overlay/Popup/NoButton" to="." method="_on_NoButton_mouse_entered"]
[connection signal="pressed" from="Overlay/Popup/NoButton" to="." method="_on_NoButton_pressed"]
